--- a/styles/index.css
+++ b/styles/index.css
@@ -27,10 +27,11 @@ body {
   margin: 20px;
   width: 120px;
   display: inline-block;
+  padding: 0px 5px 10px 5px;
 }
 
 .servicios li:hover {
-  background-color: #f0f0f0;
+  background-color: lightgoldenrodyellow;
   border: goldenrod 1px solid;
   cursor: pointer;
 }
@@ -43,4 +44,17 @@ body {
 .carrito li img {
   width: 50px;
   height: 50px;
+}
+
+.carrito ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.carrito li span {
+  margin-left: 20px;
+}
+
+.carrito li button {
+  margin-left: 5px;
 }
