--- a/styles/todas_las_paginas.css
+++ b/styles/todas_las_paginas.css
@@ -29,27 +29,35 @@ nav > ul > li > ul > li {
   margin: 0 10px;
 }
 
-/*
-
-Given the following html structure
-      <ul>
-        <li class="align-left">
-          <a href="index.html">Chivitosya - Admin</a>
-        </li>
-        <li class="align-right">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="admin.html">Admin</a></li>
-          </ul>
-        </li>
-      </ul>
-We use flexbox to align the first li to the left and the second li to the right
-*/
-
-.align-left {
-  margin-right: auto;
+.button-success,
+.button-error,
+.button-warning,
+.button-secondary {
+    color: white;
+    border-radius: 4px;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 }
 
-.align-right {
-  margin-left: auto;
+.button-success {
+    background: rgb(28, 184, 65);
+    /* this is a green */
+}
+
+.button-error {
+    background: rgb(202, 60, 60);
+    /* this is a maroon */
+}
+
+.button-warning {
+    background: rgb(223, 117, 20);
+    /* this is an orange */
+}
+
+.button-secondary {
+    background: rgb(66, 184, 221);
+    /* this is a light blue */
+}
+
+.oculto {
+  display: none;
 }
