cambios de final de hora de la clase

--- a/styles/index.css
+++ b/styles/index.css
@@ -58,3 +58,13 @@ body {
 .carrito li button {
   margin-left: 5px;
 }
+
+.admin {
+  margin: 50px;
+  padding: 50px;
+}
+
+.admin .linea-formulario {
+  margin: 10px;
+  padding: 10px;
+}
