--- a/styles/todas_las_paginas.css
+++ b/styles/todas_las_paginas.css
@@ -1,8 +1,3 @@
-body {
-  width: 80%;
-  margin: auto;
-}
-
 nav {
   width: 100%;
   background-color: #f0f0f0;
@@ -29,35 +24,14 @@ nav > ul > li > ul > li {
   margin: 0 10px;
 }
 
-.button-success,
-.button-error,
-.button-warning,
-.button-secondary {
-    color: white;
-    border-radius: 4px;
-    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-}
-
-.button-success {
-    background: rgb(28, 184, 65);
-    /* this is a green */
-}
-
-.button-error {
-    background: rgb(202, 60, 60);
-    /* this is a maroon */
-}
-
-.button-warning {
-    background: rgb(223, 117, 20);
-    /* this is an orange */
-}
-
-.button-secondary {
-    background: rgb(66, 184, 221);
-    /* this is a light blue */
-}
-
 .oculto {
   display: none;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  background-color: #f0f0f0;
+  text-align: center;
+  padding: 10px;
 }
