--- a/styles/admin.css
+++ b/styles/admin.css
@@ -2,3 +2,11 @@ img {
   width: 50px;
   height: 50px;
 }
+.margin-tb-lg {
+  margin: 2rem 0;
+}
+
+table tr td:last-child,
+table tr th:last-child {
+  width: 100px;
+}
