--- a/styles/todas_las_paginas.css
+++ b/styles/todas_las_paginas.css
@@ -1,27 +1,12 @@
-nav {
-  width: 100%;
+header {
   background-color: #f0f0f0;
+  padding: 10px;
+  margin-bottom: 20px;
 }
 
-nav ul {
-  list-style: none;
-  padding-left: 0;
-  display: flex;
-}
-
-nav > ul > li {
-  margin: 10px;
-}
-
-nav > ul > li > a {
-  text-decoration: none;
-  color: black;
-  font-size: large;
-  font-weight: bold;
-}
-
-nav > ul > li > ul > li {
-  margin: 0 10px;
+header ul {
+  list-style-type: none;
+  padding-left: 10px;
 }
 
 .oculto {
@@ -29,8 +14,6 @@ nav > ul > li > ul > li {
 }
 
 footer {
-  position: fixed;
-  bottom: 0;
   background-color: #f0f0f0;
   text-align: center;
   padding: 10px;
