cambiar index para principal

--- a/styles/todas_las_paginas.css
+++ b/styles/todas_las_paginas.css
@@ -14,6 +14,8 @@ header ul {
 }
 
 footer {
+  position: absolute;
+  bottom: 0;
   background-color: #f0f0f0;
   text-align: center;
   padding: 10px;
